@@ -36,7 +36,6 @@ cl_tlcs::inst_ret()
 
   exec_ret(PC-1, &pushed_pc);
   PC= pushed_pc;
-  tick(8);
   return resGO;
 }
 
@@ -61,7 +60,6 @@ cl_tlcs::inst_call(t_addr PC_of_inst, u16_t addr)
 {
   exec_call(PC_of_inst, addr, PC);
   PC= addr;
-  tick(8);
   return resGO;
 }
 
